# HPCC-Platform

./: .gitignore  .gitmodules  404.html  BUILD_ME.html  CMakeLists.txt  README.html  hashmap.json  index.html  vcpkg.json  vcpkg.json.in
.github/: copilot-instructions.md
.github/workflows/: actst.yml  build-and-publish-debug.yml  build-and-publish.yml  build-assets.yml  build-containers-pr.yaml  build-containers-pr.yml  build-containers-target-branch.yml  build-containers.yml  build-gh_runner.yml  build-test-eclwatch.yml  build-vcpkg.yml  build-windows.yml  buildit-docker-publish-dockerhub-combined.yml  buildit-docker-publish-dockerhub.yml  buildit-docker-publish.yml  buildit-notindocker.yml  cmaketest.yml  codeql-eclwatch.yml  dlfiletest.yml  nightly-publish.yml  pr-label-test.yml  runner-packages.yml  smoketest-ac.yml  smoketest-ac2.yml  smoketest-action.yml  smoketest-cli-docker.yml  smoketest-containerized.yml  smoketest-matrix-cap.yml  smoketest-matrix.yml  smoketest-pkg.yml  smoketest-pkg2-pr.yml  smoketest-pkg2-push.yml  smoketest-via-touch-and-checkout.yml  smoketest.yml  smoketest2.yml  smoketest3.yml  test-compiler.yml  test-docker-pull.yml  test-eclhelper.yml  test-helm.yml  (+3 more)
.github/workflows/cmaketest/: CMakeLists.txt  atest.cpp
assets/: BUILD_ME.md.30102b58.js  BUILD_ME.md.30102b58.lean.js  README.md.d47690d0.js  README.md.d47690d0.lean.js  app.948e6aef.js  devdoc_CodeGenerator.md.f6cc1ee7.js  devdoc_CodeGenerator.md.f6cc1ee7.lean.js  devdoc_CodeReviews.md.00b74350.js  devdoc_CodeReviews.md.00b74350.lean.js  devdoc_Development.md.3a13baf3.js  devdoc_Development.md.3a13baf3.lean.js  devdoc_GitAuthenticate.md.0c45c9c1.js  devdoc_GitAuthenticate.md.0c45c9c1.lean.js  devdoc_MemoryManager.md.0db43fb8.js  devdoc_MemoryManager.md.0db43fb8.lean.js  devdoc_Metrics.md.27b70587.js  devdoc_Metrics.md.27b70587.lean.js  devdoc_NewFileProcessing.md.a14005ee.js  devdoc_NewFileProcessing.md.a14005ee.lean.js  devdoc_README.md.19aeb6c8.js  devdoc_README.md.19aeb6c8.lean.js  devdoc_StyleGuide.md.5c5ece38.js  devdoc_StyleGuide.md.5c5ece38.lean.js  devdoc_Workunits.md.709c22e8.js  devdoc_Workunits.md.709c22e8.lean.js  devdoc_newActivity.md.035dab3a.js  devdoc_newActivity.md.035dab3a.lean.js  ecllibrary_StyleGuide.md.e76f921f.js  ecllibrary_StyleGuide.md.e76f921f.lean.js  index.md.4d1eca41.lean.js  system_httplib_README.md.474da065.js  system_httplib_README.md.474da065.lean.js  system_security_plugins_jwtSecurity_README.md.e749cc9f.js  system_security_plugins_jwtSecurity_README.md.e749cc9f.lean.js  tools_tagging_README.md.cd6c9589.js  tools_tagging_README.md.cd6c9589.lean.js
cmake_modules/: FindZOOKEEPER.cmake  commonSetup.cmake  plugins.cmake
common/dllserver/: CMakeLists.txt
common/environment/: environment.cpp  environment.hpp
common/remote/: CMakeLists.txt  rmtfile.cpp  rmtfile.hpp  sockfile.cpp  sockfile.hpp
common/thorhelper/: roxiehelper.cpp  thorcommon.cpp  thorcommon.hpp  thorcommon.ipp  thorsoapcall.cpp  thorxmlwrite.cpp  thorxmlwrite.hpp
common/workunit/: CMakeLists.txt  workunit.cpp  workunit.hpp  workunit.ipp  wujobq.cpp
dali/: CMakeLists.txt
dali/base/: CMakeLists.txt  daclient.cpp  daclient.hpp  dacoven.cpp  dacoven.hpp  dacsds.cpp  dacsds.ipp  dadfs.cpp  dadfs.hpp  dadiags.cpp  dafdesc.cpp  dafdesc.hpp  dalock.hpp  dasds.cpp  dasds.hpp  dasds.ipp  dasess.cpp  dautils.cpp  dautils.hpp
dali/dafilesrv/: dafilesrv.cmake  dafilesrv.cpp  dafsclient.cmake  dafscontrol.cmake  dafscontrol.cpp
dali/dafsclient/: CMakeLists.txt  dafsclient.cpp  dafsclient.hpp  dafscommon.hpp  remote.cpp  remote.hpp  rmtfile.cpp  rmtfile.hpp  rmtpass.hpp  rmtsmtp.hpp  rmtspawn.cpp  rmtspawn.hpp  rmtssh.hpp
dali/daliadmin/: daadmin.cpp  daadmin.hpp  daliadmin.cpp  daliadminlib.cmake
dali/datest/: datest.cmake  datest.cpp  dfuwutest.cmake  zoo.cpp  zoo.hpp
dali/dfu/: dfurun.cpp  dfuserver.cmake  dfuserver.cpp  dfuutil.cpp  dfuwu.cmake  dfuwu.cpp
dali/dfuXRefLib/: CMakeLists.txt
dali/dfuplus/: CMakeLists.txt  dfuplus.cpp
dali/dfuxref/: CMakeLists.txt
dali/ft/: dalift.cmake  filecopy.cpp  fterror.hpp
dali/ldap/: CMakeLists.txt
dali/sasha/: CMakeLists.txt  saarch.cpp  saserver.cpp  saverify.cpp  saxref.cpp
dali/server/: CMakeLists.txt  daserver.cpp
deployment/deploy/: deploy.cpp
deployment/deployutils/: configenvhelper.cpp  configenvhelper.hpp
devdoc/: CodeGenerator.html  CodeReviews.html  Development.html  GitAuthenticate.html  MemoryManager.html  Metrics.html  NewFileProcessing.html  README.html  StyleGuide.html  StyleGuide.md  Workunits.html  newActivity.html
dockerfiles/: README.md  action.yml  buildall-common.sh  buildall.sh  incr.sh  startall.sh
dockerfiles/eclccserver/: Dockerfile
dockerfiles/esp/: Dockerfile
dockerfiles/hpcc/: values.schema.json  values.yaml
dockerfiles/img1/: Dockerfile
dockerfiles/img2/: Dockerfile
dockerfiles/platform-build/: Dockerfile
dockerfiles/platform-build-base/: Dockerfile
dockerfiles/platform-build-incremental/: Dockerfile
dockerfiles/platform-build-incremental-container/: Dockerfile
dockerfiles/platform-build-ln/: Dockerfile
dockerfiles/platform-core/: Dockerfile
dockerfiles/platform-core-debug/: Dockerfile
dockerfiles/smoketest/: action.yml  buildall.sh
dockerfiles/vcpkg/: build.sh  centos-7.dockerfile  centos-8.dockerfile  ubuntu-18.04.dockerfile  ubuntu-20.04.dockerfile  ubuntu-22.04.dockerfile
docs/: README.rst
ecl/agentexec/: agentexec.cpp
ecl/ecl-bundle/: CMakeLists.txt
ecllibrary/: StyleGuide.html
esp/services/ws_workunits/: CMakeLists.txt  ws_workunitsService.cpp
initfiles/: CMakeLists.txt
initfiles/componentfiles/thor/: CMakeLists.txt  run_thor  start_slave  start_slaves
system/: CMakeLists.txt
testing/unittests/: CMakeLists.txt  cryptotests.cpp  dalitests.cpp  jlibtests.cpp  jthreadpooltests.cpp  unittests.cpp
thorlcr/: mpitest.cpp
thorlcr/master/: CMakeLists.txt  mawatchdog.cpp  mawatchdog.hpp  thactivitymaster.cpp  thdemonserver.cpp  thdemonserver.hpp  thgraphmanager.cpp  thgraphmanager.hpp  thmastermain.cpp
tools/backupnode/: CMakeLists.txt
(+437 files in other folders)
